# muskox

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
src/: action.rs  app.rs  bitboard.rs  error.rs  evaluation.rs  lib.rs  main.rs  movepick.rs  parse.rs  tt.rs  zobrist.rs
src/search/: engine.rs  score.rs  search.rs  searchable.rs  tt.rs
