[package]
name = "muskox"
version = "0.1.0"
authors = ["jamestaylor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6"
ordered-float = "2.0"
rayon = "1.5"
lazy_static = "1.4"
nom = "6.0"
num-traits = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[patch.crates-io]
lexical-core = {git = 'https://github.com/Gelbpunkt/rust-lexical', branch = 'fix-warnings-and-update-deps'}
